Bug 443921 - Wayland: Cursor for Stylus only shows after moving mouse and is hidden after touching screen
Summary: Wayland: Cursor for Stylus only shows after moving mouse and is hidden after ...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.23.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-17 22:07 UTC by Daniel
Modified: 2021-11-29 18:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel 2021-10-17 22:07:55 UTC
SUMMARY

In Wayland, when using a stylus (wacom, etc.) to input, the default cursor is shown if it was shown previously and hidden if it was hidden previously

STEPS TO REPRODUCE
1. Move cursor using mouse or touchpad
2. hover or click stylus
3. Touch touchscreen
4. hover or click stylus

OBSERVED RESULT

At 2. the cursor moves with the stylus,
Ar 4. the cursor is invisible

EXPECTED RESULT

The cursor should always be shown when hovering or clicking stylus

SOFTWARE/OS VERSIONS

Operating System: Arch Linux
KDE Plasma Version: 5.23.0
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2
Kernel Version: 5.14.12-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 4 × AMD Ryzen 3 4300U with Radeon Graphics
Memory: 7.2 GiB of RAM
Graphics Processor: AMD RENOIR

ADDITIONAL INFORMATION

Tested on HP ProBook x360 435 G7 using HP Pro Pen G1
Comment 1 Nate Graham 2021-10-18 16:43:20 UTC
Can reproduce.
Comment 2 Bug Janitor Service 2021-11-29 14:52:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1731
Comment 3 Zamundaaa 2021-11-29 18:00:02 UTC
Git commit 33f3a13a1a8c42d57063f49e410e21ae80cb0729 by Xaver Hugl.
Committed on 29/11/2021 at 17:37.
Pushed by zamundaaa into branch 'master'.

wayland: show cursor if stylus is in proximity

While a stylus is in proximity we want to show its cursor. In this commit
it only gets shown on move because for a still unknown reason the position
is out of date before the first move event.

M  +1    -1    src/CMakeLists.txt
R  +16   -6    src/hide_cursor_spy.cpp [from: src/touch_hide_cursor_spy.cpp - 057% similarity]
R  +2    -1    src/hide_cursor_spy.h [from: src/touch_hide_cursor_spy.h - 084% similarity]
M  +2    -2    src/input.cpp

https://invent.kde.org/plasma/kwin/commit/33f3a13a1a8c42d57063f49e410e21ae80cb0729