src/hide_cursor_spy.h
@@ -12,12 +12,13 @@
 namespace KWin
 {
 
-class TouchHideCursorSpy : public InputEventSpy
+class HideCursorSpy : public InputEventSpy
 {
 public:
     void pointerEvent(KWin::MouseEvent *event) override;
     void wheelEvent(KWin::WheelEvent *event) override;
     void touchDown(qint32 id, const QPointF &pos, quint32 time) override;
+    void tabletToolEvent(TabletEvent *event) override;
 
 private:
     void showCursor();
